feat: redesign game table and match setup
